--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -21,6 +21,9 @@ const { title, description, date, draft } = Astro.props;
                     target="_blank"
                     href="https://github.com/nandan-varma"
                     class="white-back duration-200 text-zinc-400 hover:text-zinc-100"
+                    data-rybbit-event="link.github"
+                    data-rybbit-prop-content_type="blog"
+                    data-rybbit-prop-link_type="profile"
                 >
                     <svg
                         class="w-8 h-8 duration-200 hover:font-medium text-zinc-400 hover:text-zinc-100"
