--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -43,6 +43,9 @@ import { SITE_TITLE, SITE_DESCRIPTION } from "../consts";
 									href="mailto:contact@nandan.fyi"
 									target="_blank"
 									class="p-4 relative flex flex-col items-center gap-4 duration-700 group md:gap-8 md:py-24 lg:pb-48 md:p-16"
+									data-rybbit-event="link.email"
+									data-rybbit-prop-link_type="email"
+									data-rybbit-prop-page="contact"
 								>
 									<span
 										class="absolute w-px h-2/3"
@@ -94,6 +97,10 @@ import { SITE_TITLE, SITE_DESCRIPTION } from "../consts";
 									href="https://github.com/nandan-varma"
 									target="_blank"
 									class="p-4 relative flex flex-col items-center gap-4 duration-700 group md:gap-8 md:py-24 lg:pb-48 md:p-16"
+									data-rybbit-event="link.social"
+									data-rybbit-prop-platform="github"
+									data-rybbit-prop-link_type="profile"
+									data-rybbit-prop-page="contact"
 								>
 									<span
 										class="absolute w-px h-2/3"
@@ -142,6 +149,10 @@ import { SITE_TITLE, SITE_DESCRIPTION } from "../consts";
 									href="https://www.linkedin.com/in/nandanvarma/"
 									target="_blank"
 									class="p-4 relative flex flex-col items-center gap-4 duration-700 group md:gap-8 md:py-24 lg:pb-48 md:p-16"
+									data-rybbit-event="link.social"
+									data-rybbit-prop-platform="linkedin"
+									data-rybbit-prop-link_type="profile"
+									data-rybbit-prop-page="contact"
 								>
 									<span
 										class="absolute w-px h-2/3"
