feat. : seperated and added torchwall to all relevant pages

--- a/src/components/TorchWallCanvas.astro
+++ b/src/components/TorchWallCanvas.astro
@@ -1,5 +1,5 @@
 <div class="animation-container">
-    <canvas id="waterCanvas" aria-label="Nandan Varma"></canvas>
+    <canvas id="torchWallCanvas" aria-label="Animated brick wall with torch"></canvas>
 </div>
 
 <style>
@@ -10,8 +10,7 @@
         width: 100%;
         height: 100%;
         overflow: hidden;
-        z-index: -1;
-        pointer-events: none;
+        z-index: -2;
     }
     canvas {
         display: block;
