--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -18,6 +18,13 @@
                     Projects
                 </a>
                 <a
+                    href="/blog"
+                    class="duration-200 text-zinc-400 hover:text-zinc-100"
+                    transition:name={"Blog-Nav"}
+                >
+                    Blog
+                </a>
+                <a
                     href="/contact"
                     class="duration-200 text-zinc-400 hover:text-zinc-100"
                     transition:name={"Contact-Nav"}
