--- a/src/pages/projects/index.astro
+++ b/src/pages/projects/index.astro
@@ -2,7 +2,7 @@
 import { getCollection } from "astro:content";
 import Navigation from "../../components/Navigation.astro";
 import "../../styles/global.css";
-import ProjectCard from "@/components/ProjectCard.astro";
+import GlassCard from "@/components/GlassCard.astro";
 import Article from "@/components/Article.astro";
 import BaseHead from "@/components/BaseHead.astro";
 import TorchWall from "@/components/TorchWall.astro";
@@ -56,10 +56,10 @@ if (top3) sorted.splice(sorted.indexOf(top3), 1);
 				</div>
 
 				<div class="grid grid-cols-1 gap-8 mx-auto lg:grid-cols-2">
-					<ProjectCard>
-						<a class="" href={`/projects/${featured?.id}`}>
+					<GlassCard>
+						<a class="block h-full" href={`/projects/${featured?.id}`}>
 							<article
-								class="relative h-full w-full p-4 md:p-8"
+								class="relative h-full w-full p-4 md:p-8 flex flex-col"
 								tabindex={-1}
 							>
 								<div
@@ -100,13 +100,13 @@ if (top3) sorted.splice(sorted.indexOf(top3), 1);
 									{featured?.data.title}
 								</h2>
 								<p
-									class="mt-4 leading-8 duration-150 text-zinc-400 group-hover:text-zinc-300"
+									class="mt-4 leading-8 duration-150 text-zinc-400 group-hover:text-zinc-300 flex-1"
 									transition:name={"project-desc-" +
 										featured?.data.title}
 								>
 									{featured?.data.description}
 								</p>
-								<div class="absolute bottom-4 md:bottom-8">
+								<div class="pt-4">
 									<p
 										class="text-zinc-200 hover:text-zinc-50 hidden lg:block"
 									>
@@ -117,7 +117,7 @@ if (top3) sorted.splice(sorted.indexOf(top3), 1);
 								</div>
 							</article>
 						</a>
-					</ProjectCard>
+					</GlassCard>
 
 					<div
 						class="flex flex-col w-full gap-8 mx-auto border-t border-gray-900/10 lg:mx-0 lg:border-t-0"
@@ -126,13 +126,13 @@ if (top3) sorted.splice(sorted.indexOf(top3), 1);
 							[top2, top3]
 								.filter((project) => project !== undefined)
 								.map((project) => (
-									<ProjectCard>
+									<GlassCard>
 										<Article
 											id={project.id}
 											project={project.data}
 											views={0}
 										/>
-									</ProjectCard>
+									</GlassCard>
 								))
 						}
 					</div>
@@ -146,13 +146,13 @@ if (top3) sorted.splice(sorted.indexOf(top3), 1);
 							sorted
 								.filter((_, i) => i % 3 === 0)
 								.map((project) => (
-									<ProjectCard key={project.id}>
+									<GlassCard>
 										<Article
 											id={project.id}
 											project={project.data}
 											views={0}
 										/>
-									</ProjectCard>
+									</GlassCard>
 								))
 						}
 					</div>
@@ -161,13 +161,13 @@ if (top3) sorted.splice(sorted.indexOf(top3), 1);
 							sorted
 								.filter((_, i) => i % 3 === 1)
 								.map((project) => (
-									<ProjectCard key={project.id}>
+									<GlassCard>
 										<Article
 											id={project.id}
 											project={project.data}
 											views={0}
 										/>
-									</ProjectCard>
+									</GlassCard>
 								))
 						}
 					</div>
@@ -176,13 +176,13 @@ if (top3) sorted.splice(sorted.indexOf(top3), 1);
 							sorted
 								.filter((_, i) => i % 3 === 2)
 								.map((project) => (
-									<ProjectCard key={project.id}>
+									<GlassCard>
 										<Article
 											id={project.id}
 											project={project.data}
 											views={0}
 										/>
-									</ProjectCard>
+									</GlassCard>
 								))
 						}
 					</div>
