--- a/src/components/content/Article.astro
+++ b/src/components/content/Article.astro
@@ -1,5 +1,5 @@
 ---
-import type { Project } from "../content.config";
+import type { Project } from "@/content.config";
 
 interface Props {
   id: string;
