--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -1,6 +1,6 @@
 ---
 // 404 page referenced from https://codepen.io/GLITCHXploitR/pen/OxGKrq
-import BaseHead from "../components/BaseHead.astro";
+import BaseHead from "@/components/layout/BaseHead.astro";
 ---
 
 <html>
