--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -1,8 +1,8 @@
 ---
-import Navigation from "@/components/Navigation.astro";
-import BaseHead from "../components/BaseHead.astro";
-import TorchWall from "@/components/TorchWall.astro";
-import GlassCard from "@/components/GlassCard.astro";
+import Navigation from "@/components/layout/Navigation.astro";
+import BaseHead from "@/components/layout/BaseHead.astro";
+import TorchWall from "@/components/animations/TorchWall.astro";
+import GlassCard from "@/components/cards/GlassCard.astro";
 import { SITE_TITLE, SITE_DESCRIPTION } from "../consts";
 ---
 
