--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,7 @@
 ---
-import Water from "@/components/Water.astro";
-import TorchWall from "@/components/TorchWall.astro";
-import BaseHead from "../components/BaseHead.astro";
+import Water from "@/components/animations/Water.astro";
+import TorchWall from "@/components/animations/TorchWall.astro";
+import BaseHead from "@/components/layout/BaseHead.astro";
 import { SITE_TITLE, SITE_DESCRIPTION } from "../consts";
 ---
 
