--- a/src/components/content/Blog.astro
+++ b/src/components/content/Blog.astro
@@ -1,5 +1,5 @@
 ---
-import type { Blog } from "../content.config";
+import type { Blog } from "@/content.config";
 
 interface Props {
   id: string;
