--- a/src/pages/car.astro
+++ b/src/pages/car.astro
@@ -1,5 +1,5 @@
 ---
-import BaseHead from "../components/BaseHead.astro";
+import BaseHead from "@/components/layout/BaseHead.astro";
 import { SITE_TITLE, SITE_DESCRIPTION } from "../consts";
 import CarGame from "@/components/CarGame.astro";
 ---
