--- a/src/components/layout/Navigation.astro
+++ b/src/components/layout/Navigation.astro
@@ -4,10 +4,10 @@
 
 <header>
     <div
-        class="fixed inset-x-0 top-0 z-50 backdrop-blur duration-200 border-b bg-zinc-900/0 border-transparent"
+        class="fixed inset-x-0 top-0 z-50 duration-200 border-transparent"
     >
         <div
-            class="container flex flex-row-reverse items-center justify-between p-4 mx-auto"
+            class="container flex flex-row-reverse items-center justify-between p-4 mx-auto border border-zinc-600/30 rounded-xl mt-4 backdrop-blur-sm bg-black/10"
         >
             <div class="flex justify-between gap-8">
                 <a
