bugfix : animation improvements

--- a/src/components/animations/TorchWallCanvas.astro
+++ b/src/components/animations/TorchWallCanvas.astro
@@ -1,5 +1,8 @@
 <div class="animation-container">
-    <canvas id="torchWallCanvas" aria-label="Animated brick wall with torch"></canvas>
+    <canvas
+        id="torchWallCanvas"
+        aria-label="Animated brick wall with torch"
+        transition:persist></canvas>
 </div>
 
 <style>
