--- a/src/pages/projects/index.astro
+++ b/src/pages/projects/index.astro
@@ -46,7 +46,7 @@ if (top3) sorted.splice(sorted.indexOf(top3), 1);
 			<div
 				class="px-6 pt-16 mx-auto space-y-8 max-w-7xl lg:px-8 md:space-y-16 md:pt-24 lg:pt-32"
 			>
-				<div class="max-w-2xl mx-auto lg:mx-0">
+				<div class="max-w-2xl lg:mx-0">
 					<h2
 						class="text-3xl font-bold tracking-tight text-zinc-100 sm:text-4xl"
 						transition:name={"Projects"}
@@ -55,7 +55,7 @@ if (top3) sorted.splice(sorted.indexOf(top3), 1);
 					</h2>
 				</div>
 
-				<div class="grid grid-cols-1 gap-8 mx-auto lg:grid-cols-2">
+				<div class="grid grid-cols-1 gap-8 lg:grid-cols-2">
 					<GlassCard>
 						<a class="block h-full" href={`/projects/${featured?.id}`}>
 							<article
@@ -120,7 +120,7 @@ if (top3) sorted.splice(sorted.indexOf(top3), 1);
 					</GlassCard>
 
 					<div
-						class="flex flex-col w-full gap-8 mx-auto border-t border-gray-900/10 lg:mx-0 lg:border-t-0"
+						class="flex flex-col w-full gap-8 border-t border-gray-900/10 lg:border-t-0"
 					>
 						{
 							[top2, top3]
@@ -139,7 +139,7 @@ if (top3) sorted.splice(sorted.indexOf(top3), 1);
 				</div>
 
 				<div
-					class="grid grid-cols-1 gap-4 mx-auto lg:mx-0 md:grid-cols-3"
+					class="grid grid-cols-1 gap-4 lg:mx-0 md:grid-cols-3"
 				>
 					<div class="grid grid-cols-1 gap-4">
 						{
