--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -36,7 +36,7 @@ const sorted = blogs.sort((a, b) => {
 			<div
 				class="px-6 pt-16 mx-auto space-y-8 max-w-7xl lg:px-8 md:space-y-16 md:pt-24 lg:pt-32"
 			>
-				<div class="max-w-2xl mx-auto lg:mx-0">
+				<div class="max-w-2xl lg:mx-0">
 					<h2
 						class="text-3xl font-bold tracking-tight text-zinc-100 sm:text-4xl"
 						transition:name={"Blog"}
@@ -46,10 +46,10 @@ const sorted = blogs.sort((a, b) => {
 				</div>
 
 				<div
-					class="flex flex-col w-full gap-8 mx-auto border-t border-gray-900/10 lg:mx-0 lg:border-t-0"
+					class="flex flex-col w-full gap-8 border-t border-gray-900/10 lg:border-t-0"
 				>
 					<div
-						class="grid grid-cols-1 gap-4 mx-auto lg:mx-0 md:grid-cols-3"
+						class="grid grid-cols-1 gap-4 lg:mx-0 md:grid-cols-3"
 					>
 						<div class="grid grid-cols-1 gap-4">
 							{
