--- a/src/components/content/Blog.astro
+++ b/src/components/content/Blog.astro
@@ -11,8 +11,8 @@ const { id, blog, views } = Astro.props;
 ---
 
 
-<a href={`/blog/${id}`}>
-  <article class="p-4 md:p-8" tabindex={-1}>
+<a href={`/blog/${id}`} class="block w-full h-full">
+  <article class="p-4 md:p-8">
     <div class="flex justify-between gap-2 items-center">
       <span class="text-xs duration-1000 text-zinc-200 group-hover:text-white group-hover:border-zinc-200 drop-shadow-orange">
         {blog.date ? (
