bug fix : offload animations for better performance

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,7 +14,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from "../consts";
 		/>
 	</head>
 	<body class="m-0 p-0 flex flex-col min-h-screen relative">
-		<BackgroundAnimation text="Nandan Varma" />
+		<BackgroundAnimation client:idle text="Nandan Varma" />
 		<div
 			id="content"
 			class="flex-1 flex justify-center items-end pb-40 gap-4 md:gap-12 text-2xl md:text-3xl font-bold z-20"
